style: 💄 fix signal name overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -237,6 +237,9 @@ input[type="number"] {
         .signal-name {
           font-size: 0.9rem;
           padding-right: 2rem;
+          max-width: 22ch;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
       }
 
